--- a/Obys Agency/style.css
+++ b/Obys Agency/style.css
@@ -168,7 +168,9 @@ body {
     text-transform: uppercase;
     line-height: 7vw;
     text-decoration: underline;
+    transition: all ease 0.3s;
 }
+
 #hero3 h3 {
     font-size: 7.2vw;
     font-weight: 600;
@@ -180,4 +182,52 @@ body {
     color: transparent;
     font-weight: 500;
     text-decoration: none;
+}
+
+#page2 {
+    height: 100vh;
+    width: 100%;
+    padding-top: 17vh;
+    position: relative;
+    background-color: #151515;
+}
+
+.video-container {
+    height: 66vh;
+    width: 71vw;
+    position: relative;
+    left: 28%;
+    background-image: url(https://obys.agency/wp-content/uploads/2022/11/Showreel-2022-preview-1.jpg);
+}
+
+.video-container img {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    top: 0;
+}
+
+.video-container video {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+#video-cursor {
+    background-color: #FFA63D;
+    height: 8.5vw;
+    width: 8.5vw;
+    border-radius: 50%;
+    position: absolute;
+    top: -10%;
+    left: 80%;
+    z-index: 9999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#video-cursor svg {
+    width: 20%;
 }
