--- a/Netflix/style.css
+++ b/Netflix/style.css
@@ -125,6 +125,7 @@ nav button {
     border-radius: 4px;
     border: 1px solid white;
     margin: 2px 3px 3px 0px;
+    color: white;
 }
 
 .email ::placeholder {
